--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-postcss": "^8.0.0",
     "gulp-sass": "^4.1.0",
     "node-sass": "^4.14.1",
-    "tailwindcss": "^1.5.2"
+    "tailwindcss": "^1.5.2",
+    "tailwindcss-aspect-ratio": "^2.0.0"
   }
 }
