--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ django = "==2.2.5"
 pillow = "*"
 psycopg2 = "*"
 django-sslserver = "*"
+django-dotenv = "*"
 
 [requires]
 python_version = "3.7"
