--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
-beautifulsoup4==4.9.1
-certifi==2019.11.28
-chardet==3.0.4
-idna==2.8
-pipenv==2018.11.26
-requests==2.22.0
-selenium==3.141.0
-soupsieve==2.0.1
-urllib3==1.25.7
-virtualenv==16.7.9
-virtualenv-clone==0.5.3
+defusedxml==0.6.0
+diff-match-patch==20200713
+Django==2.2.5
+django-dotenv==1.4.2
+django-sslserver==0.22
+et-xmlfile==1.0.1
+jdcal==1.4.1
+MarkupPy==1.14
+odfpy==1.4.1
+openpyxl==3.0.5
+Pillow==7.2.0
+pytz==2020.1
+PyYAML==5.3.1
+sqlparse==0.3.1
+tablib==2.0.0
+xlrd==1.2.0
+xlwt==1.3.0
+psycopg2==2.8.6
