알약 정보 파싱

--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,8 @@ pillow = "*"
 psycopg2 = "*"
 django-sslserver = "*"
 django-dotenv = "*"
+requests = "*"
+beautifulsoup4 = "*"
 
 [requires]
 python_version = "3.7"
